--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "name": "@universal-packages/core-express-controllers",
-  "version": "1.0.12",
-  "description": "Express Controllers universal-core module abstraction.",
+  "name": "@universal-packages/core-express-controllers-authentication",
+  "version": "1.0.0",
+  "description": "Express Controllers Authentication universal-core module abstraction.",
   "author": "David De Anda <david@universal-packages.com> (https://github.com/universal-packages)",
   "license": "MIT",
   "main": "index.js",
   "types": "index.d.ts",
-  "repository": "git://git@github.com/universal-packages/universal-core-express-controllers.git",
+  "repository": "git://git@github.com/universal-packages/universal-core-express-controllers-authentication.git",
   "scripts": {
     "build": "tsc --p tsconfig.dis.json",
     "test": "jest --watch",
     "test:full": "jest --coverage --verbose",
     "test:clear": "jest --clearCache"
   },
+  "dependencies": {
+    "@universal-packages/authentication": "^1.3.2",
+    "@universal-packages/express-controllers-authentication": "^1.0.1"
+  },
   "peerDependencies": {
-    "@universal-packages/authentication": "^1.3.0",
-    "@universal-packages/core": "^1.10.1",
-    "@universal-packages/express-controllers": "^1.6.3",
-    "@universal-packages/express-controllers-authentication": "^1.0.0",
-    "@universal-packages/express-controllers-parameters": "^1.1.1",
-    "express": "^4.18.1"
+    "@universal-packages/core": "^1.10.4",
+    "@universal-packages/core-express-controllers": "^1.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
